[gd_scene load_steps=7 format=3 uid="uid://i8krnydcip25"]

[ext_resource type="Script" path="res://levels/start_scene.gd" id="1_f4nvt"]
[ext_resource type="PackedScene" uid="uid://dhcvt0glnsmon" path="res://levels/bg.tscn" id="1_x43eq"]
[ext_resource type="Texture2D" uid="uid://6ryrsnxa15l1" path="res://assets/background/Title.png" id="3_7ybhe"]
[ext_resource type="Theme" uid="uid://cffyb36ygo7ve" path="res://ui/game_theme.tres" id="3_pjxno"]
[ext_resource type="PackedScene" uid="uid://bih1t54w5gpc" path="res://ui/Settings.tscn" id="4_4k18h"]

[sub_resource type="GDScript" id="GDScript_yfdcg"]
script/source = "extends Camera2D

var offset_speed = -100


	
#func update_zoom():
#
#	var window_size = get_window().size
#	zoom.x = window_size.x / 384.0
#	zoom.y = window_size.y / 216.0
#	if zoom.x > zoom.y:
#		zoom.y = zoom.x
#	else:
#		zoom.x = zoom.y



func _process(delta):
#	get_window().size_changed.connect(update_zoom)

	zoom = Game.zoom
	
	offset.x += delta * offset_speed
"

[node name="StartScene" type="Node2D"]
script = ExtResource("1_f4nvt")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_x43eq")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(157, 293)
zoom = Vector2(3, 3)
script = SubResource("GDScript_yfdcg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Sprite2D" parent="CanvasLayer/Menu"]
position = Vector2(576, 324)
scale = Vector2(3, 3)
texture = ExtResource("3_7ybhe")

[node name="Panel" type="Panel" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = 68.0
offset_right = 106.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="continue_" type="Button" parent="CanvasLayer/Menu/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pjxno")
disabled = true
text = "Continue"
flat = true

[node name="start_game" type="Button" parent="CanvasLayer/Menu/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pjxno")
text = "Start Game"
flat = true

[node name="options" type="Button" parent="CanvasLayer/Menu/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pjxno")
text = "Options"
flat = true

[node name="quit_game" type="Button" parent="CanvasLayer/Menu/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pjxno")
text = "Quit Game"
flat = true

[node name="Settings" parent="CanvasLayer" node_paths=PackedStringArray("parent_node") instance=ExtResource("4_4k18h")]
visible = false
parent_node = NodePath("../Menu")

[connection signal="pressed" from="CanvasLayer/Menu/Panel/VBoxContainer/continue_" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/VBoxContainer/quit_game" to="." method="_on_quit_game_pressed"]
